# py-fgo

./: .gitignore  README.md  findings.md  progress.md  pyproject.toml  requirements.txt  start.bat  task_plan.md
backend/: __init__.py  app.py
backend/api/: __init__.py  battle_plans.py  calibration.py  deps.py  instances.py  logs.py  quest_profiles.py  quick_start.py  settings.py  support_profiles.py  tasks.py  ws.py
backend/core/: __init__.py  config.py  errors.py  events.py  logging.py  response.py
backend/db/: __init__.py  models.py  repositories.py  session.py
backend/services/: __init__.py  calibration.py  instance_manager.py  quick_start.py  scheduler.py  task_manager.py  worker_manager.py
configs/: default.yaml
frontend/: index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.tsx  styles.css  types.ts
scripts/: build-windows.ps1  start-dev.cmd  start-dev.ps1  start-dev.sh
tests/: conftest.py  test_adb_client.py  test_api_integration.py  test_battle_plan.py  test_card_policy.py  test_coordinates.py  test_quest_runner.py  test_task_lifecycle.py  test_vision.py  test_worker_e2e.py
worker/: __init__.py  adb_client.py  mumu_provider.py  runtime.py  screenshot.py
worker/fgo/: __init__.py  action_executor.py  battle_executor.py  card_policy.py  coordinates.py  enums.py  quest_runner.py  recovery.py  state_detector.py  state_machine.py  support_selector.py
worker/vision/: __init__.py  detector.py  matching.py  ocr.py  roi.py  templates.py
(+14 files in other folders)
